Bug 169320 - Wrong number, and erratic behavior, of a list item after a paragraph hidden by paragraph mark, when the document has tracked changes
Summary: Wrong number, and erratic behavior, of a list item after a paragraph hidden b...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2025-11-07 14:07 UTC by Mike Kaganski
Modified: 2025-12-25 10:18 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A list item hidden by paragraph mark (1.97 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-11-07 14:07 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-11-07 14:07:00 UTC
Created attachment 203802 [details]
A list item hidden by paragraph mark

Open the attachment.

It has a list, with its item 3 hidden by <w:vanish/> element in its paragraph properties (paragraph mark). The next item is a visible sub-item of item 3. There is a tracked change in the document, in the item 1 (but not in 3).

When formatting marks are hidden, Word shows the list as

1.	changed item 1
2.	item 2
3.1	subitem 2

When formatting marks are shown, Word shows the list as

1.	changed item 1
2.	item 2
3.	
3.1	subitem 2

In Writer, when formatting marks are hidden, the list is shown as

1.	changed item 1
2.	item 2
2.1[3.1] subitem 2

Showing formatting marks (and making sure that "Hidden characters" are checked in Options->Writer->Formatting Aids), the list is shown as

1.	changed item 1
2.	item 2
[3.] 
2.1[3.1] subitem 2
Comment 1 Mike Kaganski 2025-11-07 15:30:14 UTC
https://gerrit.libreoffice.org/c/core/+/193583
Comment 2 Commit Notification 2025-11-07 20:47:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/814a437a0dae0b5c07154844cd08563501807cb7

tdf#169320: Don't treat hidden-paragraph-mark as redline

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-11-10 10:42:18 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/9297d151ffb1bf59cc5f9153f55cae0edb5d9d99

tdf#169320: Don't treat hidden-paragraph-mark as redline

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.